microk8s-hono-api/hono-api-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hono-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - api-prod.testdu.uib.no
      secretName: hono-api-ingress-tls
  rules:
    - host: api-prod.testdu.uib.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hono-api
                port:
                  number: 80
